--- a/index.html
+++ b/index.html
@@ -24,12 +24,20 @@
     <!-- iPhone, retina startup image-->
     <link href="" media="(device-width: 320px) and (device-height: 480px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image">
 
+
+    <!-- Included resources-->
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?"></script>
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
     <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <script src="https://cdn.pubnub.com/pubnub-dev.js"></script>
+
+    <!-- include shake.js library (https://github.com/alexgibson/shake.js)-->
+    <script src="shake/shake.js"></script>
+
+
+    <!-- Own scripts-->
     <script src="js/model.js"></script>
     <!-- <script src="js/app.js"></script> -->
     <script>  
