--- a/testshake.html
+++ b/testshake.html
@@ -10,10 +10,13 @@
     <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <script src="shake/shake.js"></script>
+    <script src="vibrate/jquery.vibrate.js"></script>
+
 
 
     <!-- Own scripts-->
     <script src="js/shakeCtrl.js"></script>
+
 
   </head>
 
