--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="cache.appcache">
+<html>
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
     <meta charset="utf-8">
@@ -24,22 +24,38 @@
     <!-- iPhone, retina startup image-->
     <link href="" media="(device-width: 320px) and (device-height: 480px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image">
 
-
-    <!-- Included resources-->
-    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?"></script>
+    <script src="https://www.google.com/jsapi"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?"></script>
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
     <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <script src="https://cdn.pubnub.com/pubnub-dev.js"></script>
+    <script src="js/chat.js"></script>
+    <script src="js/directions.js"></script>
+    <style type="text/css">
+    #map-directions {
+      position: relative;
+      background-color: #E5E3DF;
+      overflow: hidden;
+      width: 100%;
+    }
+    #durationImg{
+      width: 5vw;
+      display: inline;
+    }
+    #durationDiv{
+      background-color: white;
+    }
+    #durationTime{
+      font-size: 6vw;
+      display: inline;
+    }
+    #chat{
+      position: absolute;
+      width: 100%;
+    }
+</style>
 
-    <!-- include shake.js library (https://github.com/alexgibson/shake.js)-->
-    <script src="shake/shake.js"></script>
-
-
-    <!-- Own scripts-->
-    <script src="js/model.js"></script>
-    <!-- <script src="js/app.js"></script> -->
     <script>  
       $("#news").swiperight(function(){
         console.log("swiped");
@@ -48,19 +64,30 @@
       function test(){
         console.log('Test!');
       }
-   </script>
+    </script>
   </head>
 
-  <body onload="waitingRoom()">
+  <body>
     <div data-role="page" id="start">
-      <div data-role="header">
+      <div id ="header" data-role="header">
         <h1>Map?</h1>
-        <a href="#chat" class="ui-btn-right" position="right">Chat!</a>
+        <!-- <a href="#chat" class="ui-btn-right" position="right">Chat!</a> -->
+        <a id="closeMap" href="" class="ui-btn-right" position="right" onclick="mapShrink()" style="display:none">Close</a>
       </div>
-      <div data-role="main">
-        <div style="height:50%">karta med position</div>
-        <div>chat</div>
-        <button onclick="requestChat()">Träffa en ny människa</button>
+      <div data-role="main" style="height:100%">
+        <div id="mapC" style="width:100%;" onclick="mapExpand()">
+          <div id="map-directions" ></div>
+        </div>
+
+        <div id="chatDiv" style="overflow:hidden">
+          <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mobillit anim id est laborum."</p>
+          <p>Meddelande nummer 2</p>
+          <p>Meddelande nummero tres!</p>
+          <div style="width:80%;margin:auto;bottom:0;left:0;right:0;position:fixed;">
+            <input placeholder="Skriv något najs här!"></input>
+          </div>
+        </div>
+
       </div>
     </div>
 
@@ -69,7 +96,6 @@
         <a href="#" class="ui-btn ui-icon-arrow-l ui-btn-icon-left" data-rel="back">Back</a>
         <h2>Chat?<span id="otheruser"></span></h2>
       </div>
-      <button onclick="requestChat()">Träffa en ny människa</button>
       <div id="output" class="main">
         Fet Output här!
       </div>
@@ -78,7 +104,7 @@
       <div data-role="footer" data-position="fixed" class="ui-field-contain">
         <fieldset data-type="horizontal">
           <input class="input-block-level" data-inline="true" type="text" placeholder="Enter message here:" id="msg" style="width=90%">
-          <button id="buttonSend" ata-inline="true" class="btn" style="width=10%" onclick="sendMsg(getElementById('msg').value)">Send</button> <!-- Alternativt ska det vara $("#msg") som argument-->
+          <button id="buttonSend" ata-inline="true" class="btn" style="width=10%">Send</button>
         </fieldset>
       </div>
     </div>
