--- a/index.html
+++ b/index.html
@@ -30,9 +30,15 @@
     <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <script src="https://cdn.pubnub.com/pubnub-dev.js"></script>
-    <script src="js/chat.js"></script>
-    <script src="js/directions.js"></script>
+
+    <script src="js/app.js"></script>
     <script src="js/model.js"></script>
+    <script src="js/waitingRoomView.js"></script>
+    <script src="js/waitingRoomViewCtrl.js"></script>
+    <script src="js/chatView.js"></script>
+    <script src="js/chatViewCtrl.js"></script>    
+
+    
     <style type="text/css">
     #map-directions {
       position: relative;
@@ -55,6 +61,24 @@
       position: absolute;
       width: 100%;
     }
+    .myMsg{
+      background-color: rgba(180,255,180,0.8);
+      max-width:80%;
+      margin-left: 20%;
+      border-radius: 20px;
+      padding:10px;
+      margin-top:5px;
+      margin-right: 10px;
+    }
+
+    .theirMsg{
+      background-color: rgba(180,180,255,0.8);
+      max-width:80%;
+      margin-left:0;
+      border-radius: 20px;
+      padding:10px;
+      margin-top:5px;
+    }
 </style>
 
     <script>  
@@ -68,24 +92,21 @@
     </script>
   </head>
 
-  <body onload="waitingRoom();">
+  <body>
 
 
     <div data-role="page" id="waitingRoom">
-      <div data-role="header" data-position="fixed">
-        <a href="#" class="ui-btn ui-icon-arrow-l ui-btn-icon-left" data-rel="back">Back</a>
+      <div data-role="header" data-position="fixed" id="header">
+       <!--  <a href="#" class="ui-btn ui-icon-arrow-l ui-btn-icon-left" data-rel="back">Back</a> -->
+        <button id="randomButton" ata-inline="true" class="btn" style="width=10%">Shake</button>
         <h2>Waiting room<span id="otheruser"></span></h2>
       </div>
-      <div id="output" class="main">
-        Fet Output här!
+      <div id="myMapPosition" data-role="main">    
       </div>
 
       <!-- Tror inte vi ska ha input message i en footer. Det verkar vara svårt att style skit i en jQuery footer -->
-      <div data-role="footer" data-position="fixed" class="ui-field-contain">
-        <fieldset data-type="horizontal">
-          <input class="input-block-level" data-inline="true" type="text" placeholder="Enter message here:" id="msg" style="width=90%">
-          <button id="buttonSend" ata-inline="true" class="btn" style="width=10%" onclick="requestChat()">Random</button>
-        </fieldset>
+      <div data-role="footer" data-position="fixed" class="ui-field-contain" data-theme="a">
+        <button id="btnDeny" data-theme="b" style="width:50%">Deny</button><button id="btnAccept" data-theme="a" style="width:50%">Accept</button>          
       </div>
     </div>
 
@@ -94,17 +115,15 @@
       <div id ="header" data-role="header">
         <h1>Map?</h1>
         <!-- <a href="#chat" class="ui-btn-right" position="right">Chat!</a> -->
-        <a id="closeMap" href="" class="ui-btn-right" position="right" onclick="mapShrink()" style="display:none">Close</a>
+        <a id="closeMap" href="" class="ui-btn-right" position="right" style="display:none">Close</a>
       </div>
       <div data-role="main" style="height:100%">
-        <div id="mapC" style="width:100%;" onclick="mapExpand()">
+        <div id="dMap" style="width:100%;">
           <div id="map-directions" ></div>
         </div>
 
-        <div id="chatDiv" style="overflow:hidden">
-          <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mobillit anim id est laborum."</p>
-          <p>Meddelande nummer 2</p>
-          <p>Meddelande nummero tres!</p>
+        <div id="chatOutput">
+          
           <div style="width:80%;margin:auto;bottom:0;left:0;right:0;position:fixed;">
             <input placeholder="Skriv något najs här!"></input>
           </div>
