knappar börjar mystiskt fungera

--- a/index.html
+++ b/index.html
@@ -139,11 +139,10 @@
           <div id="map-directions" ></div>
         </div>
 
-        <div id="chatOutput">
+        <div id="chatOutput"></div>
           
-          <div style="width:80%;margin:auto;bottom:0;left:0;right:0;position:fixed;">
-            <input id="txtChat"placeholder="Skriv något najs här!"></input><button id="btnChat">Send</button>
-          </div>
+        <div style="width:80%;margin:auto;bottom:0;left:0;right:0;position:fixed;">
+          <input id="txtChat"placeholder="Skriv något najs här!"></input><button id="btnChat">Send</button>
         </div>
 
       </div>
