--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
     <script src="js/model.js"></script>
     <script src="shake/shake.js"></script>
     <script src="js/shakeCtrl.js"></script>
+    <script src="js/profileCtrl.js"></script>
+    <script src="js/profileView.js"></script>
     <script src="js/waitingRoomView.js"></script>
     <script src="js/waitingRoomViewCtrl.js"></script>
     <script src="js/chatViewCtrl.js"></script>    
     <script src="js/chatView.js"></script>
-    <script src="js/profileView.js"></script>
-    <script src="js/profileCtrl.js"></script>
+
+
 
 
     
@@ -138,15 +140,10 @@
       <input id="inputName" placeholder="Enter profile name here"></input>
       <button id="sendName">Done!</button>
       <p>Select image: </p>
-      <input id="selectPic" type="file" accept="image/*"/>
-      <video id="video" width="640" height="480" autoplay></video>
-      <canvas id="capturedPhoto" width="500" height="400">
-      </canvas>
-
-      <!-- Tror inte vi ska ha input message i en footer. Det verkar vara svårt att style skit i en jQuery footer -->
-      <div data-role="footer" data-position="fixed" class="ui-field-contain" data-theme="a">
-        <button id="btnDeny" data-theme="b" style="width:50%">Deny</button><button id="btnAccept" data-theme="a" style="width:50%">Accept</button>          
-      </div>
+      <input id="selectPic" type="file" accept="image/*"></input>
+      <!--video id="video" width="640" height="480" autoplay></video-->
+      <!--canvas id="capturedPhoto" width="500" height="400">
+      </canvas-->
     </div>
 
 
