Users online and smaller geohash area

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div data-role="page" id="waitingRoom">
       <div data-role="header" data-position="fixed" id="header">
         <button id="randomButton" ata-inline="true" class="btn" style="width=10%">Shake</button>
-        <h2>Waiting room<span id="otheruser"></span></h2>
+        <h2 id="usersOnline"></h2>
       </div>
       <div id="myMapPosition" data-role="main">    
       </div>
